feat(v0.005): Enhance API robustness, add JMeter tests, improve docs